--- a/CoreMVC/CoreMVC/Views/Books/Index.cshtml
+++ b/CoreMVC/CoreMVC/Views/Books/Index.cshtml
@@ -22,7 +22,7 @@
                     <th>Name</th>
                     <th>Author</th>
                     <th>ISBN</th>
-                    <th></th>
+                    <th>Actions</th>
                 </tr>
             </thead>
         </table>
